/**
 * Sensor Information 
 *  Contains the information from a sensor
 */
package rtpmt.network.packet;

option java_package = "rtpmt.network.packet";
option java_outer_classname = "SensorMessage";

message SensorInformation {

	required string deviceId = 1;
	required string timeStamp = 2;  

	message LocationInformation {
		required double latitude = 1;
		required double longitude = 2;
	}
	
	required LocationInformation location = 3;
	
	enum SensorType {
		TEMPERATURE = 0;
                HUMIDITY = 1;
		VIBRATIONX = 2;
                VIBRATIONY = 3;
                VIBRATIONZ = 4;
                SHOCKX = 5;
                SHOCKY = 6;
		SHOCKZ = 7;
	}
  
	message Sensor {
		required string sensorId = 1;		
		required SensorType sensorType = 2 [default = TEMPERATURE];
		required string sensorValue = 3;
		required string sensorUnit = 4 ;
	}

	repeated Sensor sensors = 4;
}



